refactoring, adding in parts

--- a/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
+++ b/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
@@ -35,7 +35,7 @@
     "import pandas as pd\n",
     "from shared.DescriptiveStats import create_stats\n",
     "\n",
-    "df = pd.read_csv('insurance.csv')\n",
+    "df = pd.read_csv('shared/insurance.csv')\n",
     "\n",
     "descriptiveData = {}\n",
     "df.info()"
