--- a/notebook/DataAnalysis/Histograms.ipynb
+++ b/notebook/DataAnalysis/Histograms.ipynb
@@ -20,7 +20,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('insurance.csv')"
+    "df = pd.read_csv('shared/insurance.csv')"
    ],
    "metadata": {
     "collapsed": false,
