--- a/notebook/DataAnalysis/SimpleLinearRegression.ipynb
+++ b/notebook/DataAnalysis/SimpleLinearRegression.ipynb
@@ -9,7 +9,7 @@
     "import seaborn as sb\n",
     "from matplotlib import pyplot as plt\n",
     "\n",
-    "df = pd.read_csv('insurance.csv')\n"
+    "df = pd.read_csv('shared/insurance.csv')\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -78,7 +78,7 @@
     "number_columns = df.select_dtypes(include='number').drop('charges', axis=1)\n",
     "for column in number_columns:\n",
     "    sb.regplot(x = column, y = \"charges\", data = df)\n",
-    "    plt.show()"
+    "    plt.show()\n"
    ],
    "metadata": {
     "collapsed": false,
