--- a/notebook/PythonBeingCool/PythonBasics/PythonBasics.ipynb
+++ b/notebook/PythonBeingCool/PythonBasics/PythonBasics.ipynb
@@ -14,6 +14,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1]\n",
+      "[1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1]\n",
+    "b = a\n",
+    "print(b) # [1]\n",
+    "\n",
+    "b.append(2)\n",
+    "print(a) # [1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "pycharm": {
@@ -52,7 +75,7 @@
    "source": [
     "aNumber = \"3\"\n",
     "\n",
-    "print(aNumber)\n"
+    "print(aNumber) # counted as a number\n"
    ]
   },
   {
@@ -99,6 +122,137 @@
     "normal_tuple = 1,2,3\n",
     "a,b,c = normal_tuple\n",
     "print(a, b, c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "this_is_a_list = list([1,2,3,4,5])\n",
+    "this_is_a_list.extend([7,8,9])\n",
+    "this_is_a_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_tuple = (1,2,3,4,5)\n",
+    "tuple_into_list = list(a_tuple)\n",
+    "tuple_into_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['an',\n",
+       " 'in',\n",
+       " 'As',\n",
+       " 'if',\n",
+       " 'on',\n",
+       " 'an',\n",
+       " 'in',\n",
+       " 'by',\n",
+       " 'On',\n",
+       " 'my',\n",
+       " 'on',\n",
+       " 'my',\n",
+       " 'on',\n",
+       " 'the',\n",
+       " 'The',\n",
+       " 'day',\n",
+       " 'the',\n",
+       " 'sky',\n",
+       " 'day',\n",
+       " 'Like',\n",
+       " 'echo',\n",
+       " 'will',\n",
+       " 'come',\n",
+       " 'back',\n",
+       " 'life',\n",
+       " 'goes',\n",
+       " 'Like',\n",
+       " 'blue',\n",
+       " 'life',\n",
+       " 'goes',\n",
+       " 'Like',\n",
+       " 'this',\n",
+       " 'Yeah,',\n",
+       " 'arrow',\n",
+       " 'table',\n",
+       " 'Yeah,',\n",
+       " 'again',\n",
+       " 'forest',\n",
+       " 'around',\n",
+       " 'flying',\n",
+       " 'nothing',\n",
+       " 'Another',\n",
+       " 'pillow,',\n",
+       " 'happened']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"\"\"Like an echo in the forest\n",
+    "\n",
+    "The day will come back around\n",
+    "\n",
+    "As if nothing happened\n",
+    "\n",
+    "Yeah, life goes on\n",
+    "\n",
+    "Like an arrow in the blue sky\n",
+    "\n",
+    "Another day flying by\n",
+    "\n",
+    "On my pillow, on my table\n",
+    "\n",
+    "Yeah, life goes on\n",
+    "\n",
+    "Like this again\"\"\"\n",
+    "\n",
+    "string_as_list = string.split()\n",
+    "string_as_list.sort(key=len)\n",
+    "string_as_list\n"
    ]
   },
   {
