--- a/notebook/PythonBeingCool/PythonBasics/PythonBasics.ipynb
+++ b/notebook/PythonBeingCool/PythonBasics/PythonBasics.ipynb
@@ -13,6 +13,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -32,7 +39,7 @@
     "print(b) # [1]\n",
     "\n",
     "b.append(2)\n",
-    "print(a) # [1]"
+    "print(a) # [1,2]"
    ]
   },
   {
@@ -73,9 +80,22 @@
     }
    ],
    "source": [
-    "aNumber = \"3\"\n",
+    "test = \"3\"\n",
+    "print(test) # 3 IT IS CLASSED AS AN INT\n",
     "\n",
-    "print(aNumber) # counted as a number\n"
+    "test2 = str(\"3\")\n",
+    "print(test2) # 3 IT IS CLASSED AS A STRING\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "## Data Structures"
    ]
   },
   {
@@ -102,7 +122,14 @@
     "nested_tuple = (1,2,3),(4,5,6)\n",
     "\n",
     "# Cool loops\n",
-    "[x[1] for x in nested_tuple]\n"
+    "[x[1] for x in nested_tuple]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "YOU CAN DO THE OBJECT ASSIGNING THINGY IN PYTHON"
    ]
   },
   {
@@ -256,11 +283,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loops"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "i = 0\n",
+    "while i < 10:\n",
+    "    print(i)\n",
+    "    i +=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_list = ['my','stomach','hurts']\n",
+    "for x in a_list:\n",
+    "    print(x)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for x in range(0,11):\n",
+    "    print(x)\n"
+   ]
   }
  ],
  "metadata": {
