--- a/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
+++ b/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
@@ -4,10 +4,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": true
    },
    "outputs": [
     {
@@ -35,7 +32,8 @@
     "import pandas as pd\n",
     "from shared.DescriptiveStats import create_stats\n",
     "\n",
-    "df = pd.read_csv('shared/insurance.csv')\n",
+    "path = '../data/insurance.csv'\n",
+    "df = pd.read_csv(path)\n",
     "\n",
     "descriptiveData = {}\n",
     "df.info()"
@@ -45,10 +43,7 @@
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -69,10 +64,7 @@
     "df.describe(include='all')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -95,10 +87,7 @@
     "- Variance - measure of how different/ variable values are from the average and from each other.\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -122,20 +111,14 @@
     "pd.DataFrame.from_dict(descriptiveData, orient = 'index')"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "markdown",
    "source": [],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   }
  ],
