--- a/_sources/DataAnalysis/SimpleLinearRegression.ipynb
+++ b/_sources/DataAnalysis/SimpleLinearRegression.ipynb
@@ -8,14 +8,11 @@
     "import pandas as pd\n",
     "import seaborn as sb\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
-    "df = pd.read_csv('shared/insurance.csv')\n"
+    "path = '../data/insurance.csv'\n",
+    "df = pd.read_csv(path)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -32,10 +29,7 @@
     "- $x$\t=\tx-coordinate"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -81,10 +75,7 @@
     "    plt.show()\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
