--- a/_sources/PythonBeingCool/PythonBasics/PythonBasics.ipynb
+++ b/_sources/PythonBeingCool/PythonBasics/PythonBasics.ipynb
@@ -323,8 +323,88 @@
    "outputs": [],
    "source": [
     "for x in range(0,11):\n",
-    "    print(x)\n"
+    "    print(x)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This function takes in the parameter meep\n"
+     ]
+    }
+   ],
+   "source": [
+    "def a_function(text):\n",
+    "    print(\"This function takes in the parameter \" + text)\n",
+    "\n",
+    "a_function(\"meep\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'file', 'has', 'some', 'text', 'in', 'it\\n']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = open(\"testfile.txt\", \"r\") # read\n",
+    "#a - append\n",
+    "#w - write\n",
+    "#x - create new data file, if exists then error\n",
+    "#t - text file\n",
+    "#b - binary data\n",
+    "\n",
+    "data = f.read()\n",
+    "f.close()\n",
+    "\n",
+    "words = data.split(\" \")\n",
+    "words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
