--- a/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
+++ b/notebook/DataAnalysis/DescriptiveAnalysis.ipynb
@@ -2,30 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1338 entries, 0 to 1337\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column    Non-Null Count  Dtype  \n",
-      "---  ------    --------------  -----  \n",
-      " 0   age       1338 non-null   int64  \n",
-      " 1   sex       1338 non-null   object \n",
-      " 2   bmi       1338 non-null   float64\n",
-      " 3   children  1338 non-null   int64  \n",
-      " 4   smoker    1338 non-null   object \n",
-      " 5   region    1338 non-null   object \n",
-      " 6   charges   1338 non-null   float64\n",
-      "dtypes: float64(2), int64(2), object(3)\n",
-      "memory usage: 73.3+ KB\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "is_executing": true,
+     "name": "#%%\n"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from shared.DescriptiveStats import create_stats\n",
@@ -39,13 +23,21 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -231,7 +223,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "# Descriptive Analysis\n",
     "This type of analysis describes and summarises the data\n",
@@ -253,7 +249,11 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -372,7 +372,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": []
   }
  ],
