--- a/_sources/Projects/USMedicalInsuranceCosts.ipynb
+++ b/_sources/Projects/USMedicalInsuranceCosts.ipynb
@@ -56,7 +56,7 @@
     "import pandas as pd\n",
     "from IPython.display import display, HTML\n",
     "from shared.MetricsHTML import style, html\n",
-    "\n",
+    "from shared.palette import palette\n",
     "path = '../data/insurance.csv'\n",
     "\n",
     "df = pd.read_csv(path)\n",
@@ -295,7 +295,7 @@
    "source": [
     "sex_and_charges = df[['sex', 'charges']]\n",
     "sex_data = sex_and_charges['sex'].value_counts()\n",
-    "sex_data.plot.bar(x='sex', color='#9056FA', title='The Count of Male vs Female records in the dataset', xlabel='Sex', ylabel='Count');"
+    "sex_data.plot.bar(x='sex', color=palette[\"Pink Lace\"], title='The Count of Male vs Female records in the dataset', xlabel='Sex', ylabel='Count');"
    ]
   },
   {
@@ -363,7 +363,7 @@
     "male_charges = sex_and_charges.query(\"sex == 'male'\")['charges'].mean()\n",
     "male_charges_display = '$' + format(male_charges, '.2F')\n",
     "\n",
-    "display(HTML(style + html.format(female_charges_display, male_charges_display)))\n"
+    "display(HTML(style.format(palette[\"Pink Lace\"]) + html.format(female_charges_display, male_charges_display)))\n"
    ]
   },
   {
