--- a/notebook/Projects/USMedicalInsuranceCosts.ipynb
+++ b/notebook/Projects/USMedicalInsuranceCosts.ipynb
@@ -363,7 +363,7 @@
     "male_charges = sex_and_charges.query(\"sex == 'male'\")['charges'].mean()\n",
     "male_charges_display = '$' + format(male_charges, '.2F')\n",
     "\n",
-    "display(HTML(style.format(palette[\"Pink Lace\"]) + html.format(female_charges_display, male_charges_display)))\n"
+    "display(HTML(style + html.format(female_charges_display, male_charges_display)))\n"
    ]
   },
   {
