--- a/_sources/Projects/ProductDefects.ipynb
+++ b/_sources/Projects/ProductDefects.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5004fed3",
    "metadata": {
     "pycharm": {
@@ -52,7 +52,8 @@
     "import scipy.stats as stats\n",
     "import numpy as np\n",
     "\n",
-    "## Task 1:\n"
+    "## Task 1:\n",
+    "lam = 7\n"
    ]
   },
   {
@@ -70,9 +71,18 @@
    "execution_count": 3,
    "id": "9460b5b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.14900277967433773\n"
+     ]
+    }
+   ],
    "source": [
-    "## Task 2:\n"
+    "## Task 2:\n",
+    "print(stats.poisson.pmf(7,7))"
    ]
   },
   {
@@ -346,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
